objects/Purchase_Order_Lines__c.object
<CustomObject>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Purchase Order Line</label>
    <nameField>
        <displayFormat>POL-{00000}</displayFormat>
        <label>Purchase Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>